--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+﻿
 
 
 
@@ -123,4 +123,15 @@ body {
 body {
   background-color: #424570;
 }
+  .meta-tag {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .meta-tag img {
+    margin-top: 10px;
+    max-width: 100%;
+  }
 
